--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
-    "test": "npm run editorconfig && npm run stylelint && eslint source/js/",
+    "test": "npm run editorconfig && npm run stylelint && eslint source/js/ --fix",
     "build": "webpack",
     "webp": "gulp webp",
     "sprite": "gulp sprite",
