Удаление опции --open у webpack-dev-server

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "build": "webpack",
     "webp": "gulp webp",
     "sprite": "gulp sprite",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server"
   },
   "browserslist": [
     "last 2 versions",
