Добавление опции --host для webpack-dev-server

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "build": "webpack",
     "webp": "gulp webp",
     "sprite": "gulp sprite",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --host"
   },
   "browserslist": [
     "last 2 versions",
