--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Личный проект «Таинственный отпуск» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
-    "concurrently": "5.1.0",
     "copy-webpack-plugin": "5.1.1",
     "css-loader": "3.5.1",
     "csso-webpack-plugin": "2.0.0-beta.1",
@@ -19,12 +18,11 @@
     "html-webpack-plugin": "4.2.0",
     "lodash": "4.17.15",
     "mini-css-extract-plugin": "0.9.0",
-    "node-sass": "4.13.1",
-    "pixel-glass": "1.0.13",
     "posthtml": "0.12.0",
     "posthtml-include": "1.2.0",
     "posthtml-loader": "1.0.2",
     "posthtml-parser": "0.4.2",
+    "sass": "1.32.8",
     "sass-loader": "8.0.2",
     "style-loader": "1.1.3",
     "stylelint": "9.10.x",
@@ -32,17 +30,16 @@
     "webpack": "4.41.5",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3",
-    "webpack-glsl-loader": "1.0.1",
     "write-file-webpack-plugin": "4.5.1"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
-    "test": "npm run editorconfig && npm run stylelint && eslint source/js/ --fix",
+    "test": "npm run editorconfig && npm run stylelint && eslint source/js/",
     "build": "webpack",
     "webp": "gulp webp",
     "sprite": "gulp sprite",
-    "start": "webpack-dev-server --host"
+    "start": "webpack-dev-server --open"
   },
   "browserslist": [
     "last 2 versions",
@@ -56,9 +53,6 @@
     "source/img/**/*.svg",
     "source/sass/**/*.{sass,scss}"
   ],
-  "engines": {
-    "node": "8.15"
-  },
   "dependencies": {
     "normalize.css": "8.0.1",
     "swiper": "5.3.8",
